force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/Apttus_Proposal__ProposalSystemProperties__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Quote/Proposal System properties</description>
    <label>Proposal System Properties</label>
</CustomObject>