force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__AdminUser__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__AdminUser__c</fullName>
    <description>The admin user name (format = first name, last name)</description>
    <inlineHelpText>The admin user is the default owner of activities created by a user who is not allowed to be the owner (for e.g. customer portal user).</inlineHelpText>
    <label>Admin User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>