force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__BypassSharing__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__BypassSharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether apex code can bypass record sharing</description>
    <label>Bypass Sharing</label>
    <type>Checkbox</type>
</CustomField>