force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__CSSOverride__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__CSSOverride__c</fullName>
    <description>The name of the static resource to override CSS in Proposal document generation page</description>
    <inlineHelpText>The name of the static resource to override CSS in Proposal document generation page</inlineHelpText>
    <label>CSS Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>