force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__CustomDocGenURL__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__CustomDocGenURL__c</fullName>
    <description>The custom URL accessed when using custom button in DocGen page</description>
    <inlineHelpText>The custom URL accessed when using custom button in DocGen page</inlineHelpText>
    <label>Custom Doc Gen URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>