force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__DefaultEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__DefaultEmailTemplate__c</fullName>
    <description>The default email used when sending the email</description>
    <inlineHelpText>The default email used when sending the email</inlineHelpText>
    <label>Default Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>