force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__DefaultOpportunityQuoteOwner__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__DefaultOpportunityQuoteOwner__c</fullName>
    <defaultValue>&quot;Opportunity Owner&quot;</defaultValue>
    <description>The default owner for the quote/proposal created from an opportunity. Valid values are Opportunity Owner and Current User. If not set, the Opportunity Owner will become the owner of the new quote/proposal.</description>
    <inlineHelpText>The default owner for the quote/proposal created from an opportunity. Valid values are Opportunity Owner and Current User. If not set, the Opportunity Owner will become the owner of the new quote/proposal.</inlineHelpText>
    <label>Default Opportunity Quote Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>