force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__DefaultQuoteAgreementOwner__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__DefaultQuoteAgreementOwner__c</fullName>
    <defaultValue>&quot;Quote Owner &quot;</defaultValue>
    <description>The default owner for the agreement created from a quote/proposal. Valid values are Quote Owner and Current User. If not set, the Quote Owner will become the owner of the new agreement</description>
    <inlineHelpText>The default owner for the agreement created from a quote/proposal. Valid values are Quote Owner and Current User. If not set, the Quote Owner will become the owner of the new agreement</inlineHelpText>
    <label>Default Quote Agreement Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>