force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__DisableOpportunityProductsCopy__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__DisableOpportunityProductsCopy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether opportunity products copy to the quote/proposal is disabled</description>
    <inlineHelpText>Indicates whether opportunity products copy to the quote/proposal is disabled</inlineHelpText>
    <label>Disable Opportunity Products Copy</label>
    <type>Checkbox</type>
</CustomField>