force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__DocumentNamingConvention__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__DocumentNamingConvention__c</fullName>
    <description>Document generation naming convention, by defining a string of delimited variables, in the format %VariableName1%_%VariableName 2%. The default value is %:Proposal_Name__c%_%action%_%templatename%_%timestamp%.</description>
    <inlineHelpText>Document generation naming convention, by defining a string of delimited variables, in the format %VariableName1%_%VariableName 2%. The default value is %:Proposal_Name__c%_%action%_%templatename%_%timestamp%.</inlineHelpText>
    <label>Document Naming Convention</label>
    <type>TextArea</type>
</CustomField>