force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__EmailTemplateForPresentingProposals__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__EmailTemplateForPresentingProposals__c</fullName>
    <description>The name of the email template to use for presenting proposals</description>
    <inlineHelpText>The default email template for presenting proposals</inlineHelpText>
    <label>Email Template For Presenting Proposals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>