force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__EnableFastDocGen__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__EnableFastDocGen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to enable the fast document generation feature</description>
    <inlineHelpText>Indicator to enable the fast document generation feature</inlineHelpText>
    <label>Enable Fast Doc Gen</label>
    <type>Checkbox</type>
</CustomField>