force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__EnableFile__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__EnableFile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable use of Files , It is mandatory to Run the Migration after making it true.</description>
    <inlineHelpText>Enable use of Files , It is mandatory to Run the Migration after making it true.</inlineHelpText>
    <label>Enable File</label>
    <type>Checkbox</type>
</CustomField>