force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__EnablePDFSecurity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__EnablePDFSecurity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabling pdf security lets users apply security settings to pdf documents and protect them with a password.</description>
    <inlineHelpText>Enabling pdf security lets users apply security settings to pdf documents and protect them with a password.</inlineHelpText>
    <label>Enable PDF Security</label>
    <type>Checkbox</type>
</CustomField>