force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__EnableSubmitMergeCall__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__EnableSubmitMergeCall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether merge calls may be submitted for processing. If enabled, a Submit button is displayed during document generation.</description>
    <inlineHelpText>Indicates whether merge calls may be submitted for processing. If enabled, a Submit button is displayed during document generation.</inlineHelpText>
    <label>Enable Submit Merge Call</label>
    <type>Checkbox</type>
</CustomField>