force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__InstanceUrl__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__InstanceUrl__c</fullName>
    <description>The Salesforce instance url</description>
    <label>Instance Url</label>
    <type>Url</type>
</CustomField>