force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__LargeDocThreshold__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__LargeDocThreshold__c</fullName>
    <defaultValue>10000</defaultValue>
    <description>The threshold of the number of line items in the proposal when exceeded indicates a large doc. A value of -1 inactivates the threshold.</description>
    <inlineHelpText>The threshold of the number of line items in the proposal when exceeded indicates a large doc. A value of -1 inactivates the threshold.</inlineHelpText>
    <label>Large Doc Threshold</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>