force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__MaxChildLevel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__MaxChildLevel__c</fullName>
    <description>The maximum level to generate the merge data for</description>
    <inlineHelpText>The maximum level to generate the merge data for</inlineHelpText>
    <label>Max Child Level</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>