force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__MergeCallTimeoutMillis__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__MergeCallTimeoutMillis__c</fullName>
    <defaultValue>60000</defaultValue>
    <description>The timeout in milliseconds for the merge request</description>
    <label>Merge Call Timeout Millis</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>