force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_Proposal__MergeWebserviceEndpoint__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__MergeWebserviceEndpoint__c</fullName>
    <description>The Apttus merge web service endpoint</description>
    <label>Merge Webservice Endpoint</label>
    <type>Url</type>
</CustomField>