force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_QPComply__CreateAgreementWithApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPComply__CreateAgreementWithApprovalStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether approval status should be retained on the cart and line items associated with the agreement created from the quote/proposal</description>
    <inlineHelpText>Indicates whether approval status should be retained on the cart and line items associated with the agreement created from the quote/proposal</inlineHelpText>
    <label>Create Agreement With Approval Status</label>
    <type>Checkbox</type>
</CustomField>