force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_QPConfig__AutoCreateCartVersionAfterFinalize__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__AutoCreateCartVersionAfterFinalize__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a new version of the cart is auto created after it is finalized</description>
    <inlineHelpText>Indicates whether a new version of the cart is auto created after it is finalized</inlineHelpText>
    <label>Auto Create Cart Version After Finalize</label>
    <type>Checkbox</type>
</CustomField>