force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_QPConfig__AutoSyncWithOpportunity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__AutoSyncWithOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the proposal will be automatically synchronized with the opportunity when the proposal is accepted.</description>
    <inlineHelpText>Indicates whether the proposal will be automatically synchronized with the opportunity when the proposal is accepted.</inlineHelpText>
    <label>Auto Sync With Opportunity</label>
    <type>Checkbox</type>
</CustomField>