force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_QPConfig__EnableProposalSummary__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__EnableProposalSummary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to enable the proposal summary object</description>
    <inlineHelpText>Indicator to enable the proposal summary object</inlineHelpText>
    <label>Enable Proposal Summary</label>
    <type>Checkbox</type>
</CustomField>