force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_QPConfig__SyncBundleUsingLineItems__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__SyncBundleUsingLineItems__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether proposal line items should be used to synchronize bundle products. The default uses proposal summary objects. Only applicable when proposal summary is enabled.</description>
    <inlineHelpText>Indicates whether proposal line items should be used to synchronize bundle products. The default uses proposal summary objects. Only applicable when proposal summary is enabled.</inlineHelpText>
    <label>Sync Bundle Using Line Items</label>
    <type>Checkbox</type>
</CustomField>