force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_QPDSign__AutoSelectMultipleRecipients__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPDSign__AutoSelectMultipleRecipients__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows projects to specify a list of recipients that will be defaulted for the eSignature. 
To use this option, projects will add &quot;DocuSign Default Recipients&quot; related list on the Proposal and user will specify the list for each Proposal</description>
    <inlineHelpText>Allows projects to specify a list of recipients that will be defaulted for the eSignature. 
To use this option, projects will add &quot;DocuSign Default Recipients&quot; related list on the Proposal and user will specify the list for each Proposal</inlineHelpText>
    <label>Auto-Select multiple recipients?</label>
    <type>Checkbox</type>
</CustomField>