force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_QPDSign__EnableDocumentPreviewInDocuSign__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPDSign__EnableDocumentPreviewInDocuSign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable document preview in DocuSign Application ?</description>
    <inlineHelpText>Enable document preview in DocuSign Application ?</inlineHelpText>
    <label>Enable Document Preview in DocuSign App</label>
    <type>Checkbox</type>
</CustomField>