force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_QPDSign__EnableRoleNameInUI__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPDSign__EnableRoleNameInUI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Role Name In UI</description>
    <inlineHelpText>Enable Role Name In UI</inlineHelpText>
    <label>Enable Role Name In UI</label>
    <type>Checkbox</type>
</CustomField>