force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_QPDSign__ESignatureStrictMode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPDSign__ESignatureStrictMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RESERVED: Run Docusign eSignature Strict more where this will disable buttons for Select Attachments / Recipeints</description>
    <inlineHelpText>RESERVED: Run Docusign eSignature Strict more where this will disable buttons for Select Attachments / Recipeints</inlineHelpText>
    <label>ESignatureStrictMode</label>
    <type>Checkbox</type>
</CustomField>