force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_QPDSign__FieldNameAutoSelectRecipient__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPDSign__FieldNameAutoSelectRecipient__c</fullName>
    <description>The API Name of the field which holds the value for the recipient to auto select</description>
    <inlineHelpText>The API Name of the field which holds the value for the recipient to auto select</inlineHelpText>
    <label>Auto Select Recipient Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>