force-app/main/default/objects/Apttus_Proposal__ProposalSystemProperties__c/fields/Apttus_QPDSign__OneClickSend__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPDSign__OneClickSend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this to send for eSignature directly from the Proposal page. The eSignature request will automatically include the recipients from the default recipient list/OR from the field defined under the custom setting field &quot;Auto Select Recipient Field&quot;, and will automatically select the first attachment from the proposal&apos;s notes &amp; attachment list.</description>
    <inlineHelpText>Use this to send for eSignature directly from the Proposal page, by auto including the recipients from the default recipient list/OR from the field defined under the custom setting field &quot;Auto Select Recipient Field&quot;, and auto selecting the first doc.</inlineHelpText>
    <label>One Click Send</label>
    <type>Checkbox</type>
</CustomField>